헤더다시연결
헤더다시연결

--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Header Fragment -->
-    <header th:insert="~{fragments/header :: headerFragment}">
+    <header th:replace="~{fragments/header :: headerFragment}">
     </header>
 
     <!-- Main Content -->
@@ -56,7 +56,7 @@
     </div>
 
     <!-- Footer Fragment -->
-    <footer th:insert="~{fragments/footer :: footerFragment}">
+    <footer th:replace="~{fragments/footer :: footerFragment}">
     </footer>
 
 
