--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="navbar-left">
             <a class="navbar-brand" href="/main">
-                <img th:src="@{img/fragments/logoG.png}" alt="Logo" style="width: 150px; height: 65px;">
+                <img th:src="@{/img/fragments/logoG.png}" alt="Logo" style="width: 150px; height: 65px;">
             </a>
             <div class="search-bar">
                 <input type="text" placeholder="검색">
