지원자 지원 내역 상세 페이지 MarkUp
콘테스트에 지원한 지원자의 지원 정보를 볼 수 있는 페이지 기본 MarkUp

페이지 연결 :

콘테스트 상세 정보 페이지에서 지원하기 버튼을 통해 콘테스트에 응모
콘테스트 주최자가 마이페이지에서 진행한 콘테스트 목록 확인
해당 콘테스트 클릭시 콘테스트 상세 정보 페이지로 연결
탭으로 지원자의 지원 목록을 확인
지원자를 선택시 해당 지원자의 지원 정보를 볼 수 있는 페이지로 연결 ← 작성 페이지
작품 확인 후 1, 2, 3등 등수 및 상금이 적힌 박스를 선택하면 silddown으로 수상작으로 선정할 수 있는 버튼이 출력됨
버튼 클릭시 cofrim( ) 메소드로 수상자 선정 여부를 재확인
확인을 누르면 수상작으로 선정됨

--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../list/contest_list.css">
+    <link rel="stylesheet" href="../list/contestList.css">
 </head>
 <body>
     <header>
