--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -10,23 +10,24 @@
 
 <div class="container">
     <form action="/contest/payment/submit" method="post" enctype="multipart/form-data">
-        <div class="title">결제 정보를 확인해주세요.</div>
-
+        <h1>결제 정보를 확인해주세요.</h1>
         <div class="info">
-            <h3>의뢰자 정보</h3>
-            <p>이메일 <span id="displayEmail"></span></p>
-            <p>회사명 <span id="displaycompany"></span></p>
+            <h2>의뢰자 정보</h2>
+            <p>이메일 <span id="displayEmail" ></span></p>
+<!--            문균호 시큐리티 완료 하면 값가져오기-->
+<!--            <p>이메일 <span id="displayEmail" th:text="${conCompany}"></span></p>-->
+            <p>회사명 <span id="displaycompany" th:text="${conCompany}"></span></p>
 
         </div>
 
         <div class="payment-info">
-            <h3>상금 설정</h3>
+            <h2>상금 설정</h2>
             <p>상금 <span id="totalPrize" th:text="${totalPrize * 10000}"></span> 원</p>
             <p>서비스 이용료 <span id="serviceFee" th:text="${totalPrize * 2500}"></span> 원</p>
         </div>
 
         <div class="pay">
-            <h3>총 금액</h3>
+            <h2>총 금액</h2>
             <p><span id="totalAmount" th:text="${totalPrize * 2500 + totalPrize * 10000}"></span> 원</p>
         </div>
 
