--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -60,7 +60,6 @@
                         </div>
                     </td>
                 </tr>
-
             </tbody>
 
         </table>
@@ -86,10 +85,10 @@
             </ul>
         </nav>
         
-
+        
         <!-- 등록 버튼 -->
         <div class="buttons">
-            <button class="btn btn-success">등록</button>
+            <a th:href="@{/notice/write}" class="btn btn-success">등록</a>
         </div>
     </div>
 
