--- a/src/main/resources/static/css/notifications/noticeList.css
+++ b/src/main/resources/static/css/notifications/noticeList.css
@@ -78,7 +78,7 @@ h1 {
     margin-top: 20px;
 }
 
-.buttons button {
+.buttons a {
     background-color: black;
     color: white;
     padding: 10px 20px;
@@ -87,7 +87,7 @@ h1 {
     cursor: pointer;
 }
 
-.buttons button:hover {
+.buttons a:hover {
     background-color: #333;
 }
 
