--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -29,7 +29,7 @@
 
     <!-- Main Content -->
     <div class="container">
-        <h1>공지사항 등록</h1>
+        <h2>공지사항 등록</h2>
         <form id="noticeForm" th:action="@{/notice/register}" method="post">
             <div class="form-group">
                 <label for="date">날짜</label>
@@ -37,12 +37,12 @@
                     th:value="${#dates.format(new java.util.Date(), 'yyyy-MM-dd')}" required>
             </div>
             <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" id="title" name="title" class="form-control" placeholder="제목을 입력하세요" required>
+                <label for="noticeTitle">제목</label>
+                <input type="text" id="noticeTitle" name="noticeTitle" class="form-control" placeholder="제목을 입력하세요" required>
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea id="content" name="content" class="form-control" placeholder="내용을 입력하세요"></textarea>
+                <textarea id="content" name="noticeContent" class="form-control" placeholder="내용을 입력하세요"></textarea>
             </div>
             <!-- hidden input to handle temporary save state -->
             <input type="hidden" id="noticeTempSave" name="noticeTempSave" value="false">
@@ -58,7 +58,6 @@
     <!-- Footer Fragment -->
     <footer th:replace="~{fragments/footer :: footerFragment}">
     </footer>
-
 
 </body>
 
