화면단 글자 크기 수정

--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head xmlns:th="http://www.w3.org/1999/xhtml">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/contest/ContestPay2.css">
+    <script src="/js/contest/ContestPay2.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,22 +13,22 @@
     <form action="/contest/payment/submit" method="post" enctype="multipart/form-data">
         <h1>결제 정보를 확인해주세요.</h1>
         <div class="info">
-            <h2>의뢰자 정보</h2>
+            <h3>의뢰자 정보</h3>
             <p>이메일 <span id="displayEmail" ></span></p>
 <!--            문균호 시큐리티 완료 하면 값가져오기-->
 <!--            <p>이메일 <span id="displayEmail" th:text="${conCompany}"></span></p>-->
-            <p>회사명 <span id="displaycompany" th:text="${conCompany}"></span></p>
+            <p>회사명 <span id="displaycompanyName" th:text="${conCompanyName}"></span></p>
 
         </div>
 
         <div class="payment-info">
-            <h2>상금 설정</h2>
+            <h3>상금 설정</h3>
             <p>상금 <span id="totalPrize" th:text="${totalPrize * 10000}"></span> 원</p>
             <p>서비스 이용료 <span id="serviceFee" th:text="${totalPrize * 2500}"></span> 원</p>
         </div>
 
         <div class="pay">
-            <h2>총 금액</h2>
+            <h3>총 금액</h3>
             <p><span id="totalAmount" th:text="${totalPrize * 2500 + totalPrize * 10000}"></span> 원</p>
         </div>
 
@@ -39,15 +40,4 @@
 </div>
 
 </body>
-<script>
-    // 숫자를 세자리마다 콤마(,)를 찍는 함수
-    function numberWithCommas(x) {
-        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-    }
-
-    // 각 금액을 세자리마다 콤마로 포맷팅
-    document.getElementById('totalPrize').textContent = numberWithCommas(document.getElementById('totalPrize').textContent);
-    document.getElementById('serviceFee').textContent = numberWithCommas(document.getElementById('serviceFee').textContent);
-    document.getElementById('totalAmount').textContent = numberWithCommas(document.getElementById('totalAmount').textContent);
-</script>
 </html>
