:truck: css, js 절대 경로로 변경

--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Room</title>
-    <script src="./js/chat/chatRoom.js" defer></script>
-    <link rel="stylesheet" href="./css/chat/chatRoom.css" />
+    <script src="/js/chat/chatRoom.js" defer></script>
+    <link rel="stylesheet" href="/css/chat/chatRoom.css" />
   </head>
   <body>
     <div class="container">
