--- a/src/main/resources/templates/chat/start-chat.html
+++ b/src/main/resources/templates/chat/start-chat.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1:1 채팅 시작 버튼</title>
-    <script src="./js/chat/start-chat.js" defer></script>
-    <link rel="stylesheet" href="./css/chat/start-chat.css" />
+    <script src="/js/chat/start-chat.js" defer></script>
+    <link rel="stylesheet" href="/css/chat/start-chat.css" />
   </head>
   <body>
     <div class="container">
