--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -11,12 +11,12 @@
     <div class="container">
       <!-- 채팅 목록 -->
       <div class="chat-list">
-        <div class="chat-list-header">조이마미</div>
+        <div class="chat-list-header">보라돌이</div>
         <div class="chat-item">
           <img src="https://via.placeholder.com/40" alt="User" />
           <div class="chat-item-details">
             <div class="name">공책</div>
-            <div class="last-message">조이마미님이 이미지를 보냈어요.</div>
+            <div class="last-message">보라돌이님이 이미지를 보냈어요.</div>
           </div>
           <span class="unread">1</span>
         </div>
